--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">IoNews</string>
+    <string name="app_name">KotlinNews</string>
     <string name="demo_card_text">Hello World</string>
 </resources>
